RESULTS/AutoSpec/raw_results/out-4o-sv-comp-mx/out/nested6_true-unreach-call_0001/nested6_true-unreach-call_merged.txt
/home/dimpling/AutoSpec/out/nested6_true-unreach-call_0001/nested6_true-unreach-call_merged.c:39:17: error: unterminated comment
   39 |                 /*@;
      |                 ^
